2008-03-12  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
		- (info_dialog_update): strdup returned hardware address to match
			changes in libnm-glib API

	* src/applet-device-wired.c
		- (wired_add_menu_item): carrier detect is a property of the
			wired object now, not the generic device object

2008-03-11  Tambet Ingo  <tambet@gmail.com>

	Add support for PPPoE.

	* src/utils/utils.c (connection_valid_for_wired): Add PPPoE connection 
	type to the list of valid connection types.

	* src/connection-editor/nm-connection-list.c (init_connection_lists): Add
	DSL connections.

	* src/connection-editor/nm-connection-editor.glade: Add DSL tab.

	* src/connection-editor/nm-connection-editor.c (nm_connection_editor_init):
	Fix a typo.
	(nm_connection_editor_set_connection): Handle PPPoE connection.

	* src/connection-editor/Makefile.am: Add new files to build.

	* src/connection-editor/ce-page-dsl.glade: 
	* src/connection-editor/page-dsl.c: 
	* src/connection-editor/page-dsl.c: New files.

2008-03-11  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wired.c
		- (add_default_wired_connection): no longer add a default wired
			connection; distros should create a system setting for wired and
			let the system settings service handle it

2008-03-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (foo_client_setup): adapt to libnm-glib changes due to NM D-Bus API
			change from 'StateChange' -> 'StateChanged'

2008-03-07  Dan Williams  <dcbw@redhat.com>

	* autogen.sh
		- Die gnome-common, die

2008-03-06  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (security_combo_changed): warn when nothing is selected in the security
			combo and don't crash

2008-03-02  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_exported_connection_new): don't return invalid exported
			connection

2008-02-28  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c